--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,10 @@ email: jamie.lf.wong@gmail.com
 
 # configuration for ehancements, uncomment to enable
 
+rdiscount:
+  extensions: ['smart', 'generate_toc']
+  toc_token: "{:toc}"
+
 feedburner:
   id: jamiewong
 
