--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # standard jekyll configuration
 
 permalink: pretty
-pygments: false
+highlighter: false
 exclude: ['Rakefile', 'README.md', 'config.rb', 'Gemfile']
 markdown: rdiscount
 
