--- a/hugo/config.yaml
+++ b/hugo/config.yaml
@@ -2,4 +2,5 @@ baseurl: http://jamie-wong.com
 disablePathToLower: true
 languageCode: en-us
 title: 'Zero Wind :: Jamie Wong'
+PygmentsCodeFences: true
 ...
