--- a/hugo/config.yaml
+++ b/hugo/config.yaml
@@ -3,4 +3,5 @@ disablePathToLower: true
 languageCode: en-us
 title: 'Zero Wind :: Jamie Wong'
 PygmentsCodeFences: true
+pygmentsuseclasses: true
 ...
