toc_token and instructions for running fork of hugo

--- a/hugo/config.yaml
+++ b/hugo/config.yaml
@@ -4,6 +4,7 @@ languageCode: en-us
 title: 'Zero Wind :: Jamie Wong'
 PygmentsCodeFences: true
 pygmentsuseclasses: true
+toctoken: "{:toc}"
 blackfriday:
     extensions:
         - laxHtmlBlocks
