Add atom.xml support back with the help of @jvns's post!
http://jvns.ca/blog/2016/10/09/switching-to-hugo/

--- a/hugo/config.yaml
+++ b/hugo/config.yaml
@@ -5,6 +5,8 @@ title: 'Zero Wind :: Jamie Wong'
 PygmentsCodeFences: true
 pygmentsuseclasses: true
 toctoken: "{:toc}"
+disableRSS: false
+rssuri: atom.xml
 blackfriday:
     extensions:
         - laxHtmlBlocks
