List no taxonomies to suppress generation of tags pages

--- a/hugo/config.yaml
+++ b/hugo/config.yaml
@@ -7,6 +7,7 @@ pygmentsuseclasses: true
 toctoken: "{:toc}"
 disableRSS: false
 rssuri: atom.xml
+taxonomies: []
 blackfriday:
     extensions:
         - laxHtmlBlocks
